@@ -6,9 +6,9 @@ include ("./form_data/FG_var_trunk.inc");
 include ("../lib/smarty.php");
 
 if (! has_rights (ACX_RATECARD)){ 
-	   Header ("HTTP/1.0 401 Unauthorized");
-	   Header ("Location: PP_error.php?c=accessdenied");	   
-	   die();	   
+	Header ("HTTP/1.0 401 Unauthorized");
+	Header ("Location: PP_error.php?c=accessdenied");	   
+	die();	   
 }
 
 getpost_ifset(array('popup_select', 'popup_formname', 'popup_fieldname'));
