@@ -281,6 +281,9 @@ activatedbyuser = no
 ; url of the customer interface to display after activation
 urlcustomerinterface = http://localhost/A2BCustomer_UI/
 
+; Define if you want to reload Asterisk when a SIP / IAX Friend is created at signup time
+reload_asterisk_if_sipiax_created = no
+
 ; PAYPAL SETTINGS
 [paypal]
 
